@@ -1,4 +1,5 @@
 2.1.15
+ * Set default streaming_socket_timeout_in_ms to 48 hours (CASSANDRA-11826)
  * Fix paging on DISTINCT queries repeats result when first row in partition changes (CASSANDRA-11679)
  * Add option to disable use of severity in DynamicEndpointSnitch (CASSANDRA-11737)
  * cqlsh COPY FROM fails for null values with non-prepared statements (CASSANDRA-11631)
